--- a/frontend/src/app/shared/component/contact-card/contact-card.component.css
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.css
@@ -15,3 +15,9 @@
 }.job-card .media a:hover {
     color: #fff !important;
 }
+.job-card .selectDD {
+    width: 235px;
+    border: 1px solid #d2d2d2;
+    border-radius: 7px;
+    margin-right: 3px;
+}
