--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="isMultipleMatches" class="matchs-info" style="z-index: 999;" style="top: -40px !important;">
+	<button (click)="onShowMatches($event)" id="matchBtnVal" class="matchBtn  btn-sm btn btn-fltr btn-light" [ngClass]="matchedElement ? 'btn-fltr-active' : ''" ><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
+	<button (click)="onShowMissing($event)" id="missBtnVal"  class="missBtn  btn-sm btn btn-fltr btn-light"  [ngClass]="missingElement ? 'btn-fltr-active' : ''"  ><img src="assets/images/missing-icon.png" width="15px" class="ml-0"> Missing </button>
+</div>
 <div class=" info-box">
 	<div class="col-lg-12 mt-3">
 		<div class="accordion ">
