--- a/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
@@ -5,8 +5,9 @@
         <div class="matching-post">
           <div *ngFor="let item of postedJobs; let i = index" class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
             <input (change)="onSetJob(item)" class="custom-control-input  mb-0" type="radio" id="Check_{{i}}" name="example1_{{selectedJob?.id}}_{{item?.id}}" [checked]="(selectedJob?.id == item?.id)">
-            <label class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} {{ selectedJob?.id == item?.id ? (appliedJobMeta?.total ?  '(' + appliedJobMeta?.total + ')' :  '(' +0+ ')') : ''}} </label>
-          </div>
+            <label class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} ({{ checkDataCount(item?.id)}}) </label>
+			<!--  {{ selectedJob?.id == item?.id ? (appliedJobMeta?.total ?  '(' + appliedJobMeta?.total + ')' :  '(' +0+ ')') : ''}} -->
+			</div>
         </div>
       </div>
     </div>
@@ -30,7 +31,7 @@
               <ng-container *ngIf="appliedJobs?.length; else elseTemplate">
               <tr *ngFor="let item of appliedJobs">
                 <td>
-                  <a class="text-capitalize" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: item?.user?.id, jobId: item?.job_posting?.id, path: 'applicants'}" href="javascript:;">
+                  <a class="text-capitalize" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: item?.user?.id, jobId: item?.job_posting?.id, path: 'applicants', employee: selectedJob?.company.id}" href="javascript:;">
                     {{item?.user?.first_name + ' ' + item?.user?.last_name}}
                   </a>
                   </td>
@@ -47,13 +48,14 @@
                   </span>
                 </td> -->
                 <td class="text-capitalize"> {{item?.job_posting?.title ? item?.job_posting?.title : '--'}}</td>
-                <td class="text-center text-capitalize">
+                <td class="text-center text-capitalize" *ngIf="item.short_listed !=false">
                   <select class="form-control form-control-td" (change)="onShortListUser(item, $event?.target?.value)">
                     <option [value]="null" [selected]="true" >Select</option>
                     <option [value]="true" [selected]="item?.short_listed == true">Shortlist for Interview</option>
                     <option [value]="false">Not a Fit</option>
                   </select>
                   </td>
+				  <td class="text-danger" *ngIf="item.short_listed == false">Not a Fit</td>
                 <!-- <td class="text-capitalize">
                  <button type="button" class="btn btn-sm btn-primary" (click)="onShortListUser(item)">
                    {{item?.short_listed ? 'Remove' : 'Add'}}
@@ -74,7 +76,7 @@
 			
             </tbody>
           </table>
-		  <div class="d-flex justify-content-center" style="background: #f8f8f8;" *ngIf="(appliedJobMeta?.count > 0 && appliedJobMeta?.total > this.limit)">>
+		  <div class="d-flex justify-content-center" style="background: #f8f8f8;" *ngIf="(appliedJobMeta?.count > 0 && appliedJobMeta?.total > this.limit)">
 					<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
 				[length]="length"
 				[pageSize]="limit"
