--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -199,7 +199,8 @@
 												<i class="fas fa-paper-plane"></i> Send Mail</a>
 											</span>
                     </div>
-                    <div [ngClass]="{'active': (savedProfiles?.includes(item?.id) || item?.is_saved_profile)}" (click)="onSaveProfile(item)" class="save-icon" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
+                    <div *ngIf="savedProfiles?.includes(item?.id) " (click)="onUnSaveProfile(item)" class="save-icon active" tooltip="Un Save"><i class="far fa-bookmark"></i></div>
+                    <div *ngIf="!savedProfiles?.includes(item?.id) " (click)="onSaveProfile(item)" class="save-icon" tooltip="Save"><i class="far fa-bookmark"></i></div>
                   </div>
                   <div class="media">
                     <img *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0)" [src]="item?.photo ? userMeta?.photo?.path+'/'+ userMeta?.photo?.folder+'/'+userMeta?.photo?.sizes?.medium+'/'+item?.photo+'?v='+ randomNum : 'assets/images/user-img-icon.jpg'">
@@ -250,10 +251,10 @@
         <ng-template #elseTemplate>
           <p>No candidates available</p>
         </ng-template>
-		<div class="d-flex justify-content-center" style="background: #f8f8f8;" *ngIf="((userMeta?.count > 0 && userMeta?.total > this.limit) && (userMeta?.total != userList?.length))">
+		<div class="d-flex justify-content-center" style="background: #f8f8f8;" *ngIf="((userMeta?.count > 0 && userMeta?.total > 10))">
 		<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
     [length]="length"
-    [pageSize]="limit"
+    [pageSize]="limit" [pageSizeOptions]="pageSizeOptions"
     [pageIndex]="page-1">
 </mat-paginator>
 </div>
