--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -47,7 +47,7 @@
 		  <div class="d-flex justify-content-center" style="background: #f8f8f8;"  *ngIf="appliedJobMeta?.count > 0 && appliedJobMeta?.total > 10" >
 			<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
 				[length]="length"
-				[pageSize]="limit"
+				[pageSize]="limit"  [pageSizeOptions]="pageSizeOptions"
 				[pageIndex]="page-1">
 			</mat-paginator>
 		</div>
