--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -91,7 +91,7 @@
 		<div class="d-flex justify-content-center" style="background: #f8f8f8;"  *ngIf="postedJobMeta?.count > 0 && postedJobMeta?.total > 10" >
 		<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
     [length]="length"
-    [pageSize]="limit"
+    [pageSize]="limit"  [pageSizeOptions]="pageSizeOptions"
     [pageIndex]="page-1">
 </mat-paginator>
 </div>
