--- a/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.css
+++ b/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.css
@@ -34,3 +34,24 @@
 .handsExps:hover{
 		overflow-x:auto !important;
 	}
+	.btn-fltr {
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+    margin-right: 3px;
+    margin-bottom: 14px;
+    font-size: 12px;
+    height: 26px;
+    padding: .25rem .435rem;
+}
+.btn-fltr:hover {
+
+    color: #000;
+    background-color: #e2e6ea;
+    border-color: #dae0e5;
+}
+.btn-fltr-active {
+    background-color: #e2e6ea;
+    border-color: #dae0e5;
+    color: #000;
+}
