--- a/frontend/src/app/modules/features/employer/employer-dashboard/employer-dashboard.component.html
+++ b/frontend/src/app/modules/features/employer/employer-dashboard/employer-dashboard.component.html
@@ -38,13 +38,13 @@
 					  <li class="nav-item">
 						<a (click)="onTabChange({tabName: 'matches', tabNumber: 2})"
             [ngClass]="{'active': currentTabInfo.tabNumber == 2}" class="nav-link" href="javascript:;">{{"dashboard.matches" | translate}}
-             <small id="MatchesCount" *ngIf="currentTabInfo.tabNumber == 2">(0)</small>
+             <small id="MatchesCount" >(0)</small>
           </a>
 					  </li>
 					  <li class="nav-item">
 						<a (click)="onTabChange({tabName: 'applicants', tabNumber: 3})"
             [ngClass]="{'active': currentTabInfo.tabNumber == 3}" class="nav-link" href="javascript:;">{{"dashboard.applicants" | translate}}
-             <small id="ApplicantsCount"  *ngIf="currentTabInfo.tabNumber == 3">(0)</small> 
+             <small id="ApplicantsCount" >(0)</small> 
           </a>
 					  </li>
 					  <li class="nav-item">
@@ -57,7 +57,7 @@
               <a (click)="onTabChange({tabName: 'savedProfile', tabNumber: 5})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 5}"
               class="nav-link" href="javascript:;">{{"dashboard.savedProfile" | translate}}
-              <!-- <small>(6)</small> -->
+              <small id="SavedCount">(0)</small>
             </a>
               </li>
 					</ul>
